// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                data-no-patch={true}
                href="#/"
                onClick={[Function]}
              >
                Intro
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is monkey patching?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why React?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                React highlight updates
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Material UI button effect
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React fastclick
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simple patch function
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/llamify/"
                onClick={[Function]}
              >
                Llamify
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/scramble/"
                onClick={[Function]}
              >
                Scramble
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/internationalization/"
                onClick={[Function]}
              >
                Internationalization
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
            data-no-patch={true}
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Monkey Patching React
                  </h2>
                  <p>
                    Hello! My name is Jake, and today I'm going to show you some totally not hacks at all, believe me, I promise, really not hacks... awesome monkey patching of React.
                  </p>
                  <h2>
                    Want more awesome stuff?
                  </h2>
                  <p>
                    Here's some links you might enjoy:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://jakesidsmith.github.io/react-monkey-patching/"
                        target="_blank"
                        title="This demo"
                      >
                        This demo - jakesidsmith.github.io/react-monkey-patching/
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Blog"
                      >
                        My Blog - jakesidsmith.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith/"
                        target="_blank"
                        title="My GitHub"
                      >
                        My GitHub - github.com/jakesidsmith/
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith/"
                        target="_blank"
                        title="My Twitter"
                      >
                        My Twitter - twitter.com/jakesidsmith/
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="React Highlight Updates"
                      >
                        React Highlight Updates (we'll cover this shortly) - npmjs.com/package/react-highlight-updates
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="React Fastclick"
                      >
                        React Fastclick (we'll cover this briefly also) - npmjs.com/package/react-fastclick
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when llamified 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                data-no-patch={true}
                href="#/"
                onClick={[Function]}
              >
                Intro
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is monkey patching?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why React?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                React highlight updates
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Material UI button effect
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React fastclick
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simple patch function
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/llamify/"
                onClick={[Function]}
              >
                Llamify
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/scramble/"
                onClick={[Function]}
              >
                Scramble
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/internationalization/"
                onClick={[Function]}
              >
                Internationalization
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
            data-no-patch={true}
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Llama Llama Llama
                  </h2>
                  <p>
                    Llama! Llama llama llama Llama, llama llama LLAMA'llama llama llama llama llama llama llama llama llama llama llama, llama llama, LLAMA llama, llama llama llama... llama llama llama llama Llama.
                  </p>
                  <h2>
                    Llama llama llama llama?
                  </h2>
                  <p>
                    Llama'llama llama llama llama llama llama:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://jakesidsmith.github.io/react-monkey-patching/"
                        target="_blank"
                        title="Llama llama"
                      >
                        Llama llama - llama.llama.llama/llama-llama-llama/
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith/"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama/
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith/"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama - llama.llama/llama/
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="Llama Llama Llama"
                      >
                        Llama Llama Llama (llama'llama llama llama llama) - llama.llama/llama/llama-llama-llama
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="Llama Llama"
                      >
                        Llama Llama (llama'llama llama llama llama llama) - llama.llama/llama/llama-llama
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`App should match snapshot when scrambled 1`] = `
<table
  className="app"
>
  <tbody>
    <tr>
      <td
        className="navigation"
      >
        <div
          className="scrollable"
        >
          <ul>
            <li>
              <a
                data-no-patch={true}
                href="#/"
                onClick={[Function]}
              >
                Intro
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/what-is-monkey-patching/"
                onClick={[Function]}
              >
                What is monkey patching?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/why-react-create-element/"
                onClick={[Function]}
              >
                Why React?
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-highlight-updates/"
                onClick={[Function]}
              >
                React highlight updates
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/material-ui-button-effect/"
                onClick={[Function]}
              >
                Material UI button effect
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/react-fastclick/"
                onClick={[Function]}
              >
                React fastclick
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/simple-patch-function/"
                onClick={[Function]}
              >
                Simple patch function
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/llamify/"
                onClick={[Function]}
              >
                Llamify
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/scramble/"
                onClick={[Function]}
              >
                Scramble
              </a>
            </li>
            <li>
              <a
                data-no-patch={true}
                href="#/internationalization/"
                onClick={[Function]}
              >
                Internationalization
              </a>
            </li>
            <li>
              <button
                className="remove-button"
                data-no-patch={true}
                onClick={[Function]}
              >
                Remove monkey patch.
              </button>
            </li>
          </ul>
        </div>
      </td>
      <td
        className="main"
      >
        <div>
          <h1
            className="page-title"
            data-no-patch={true}
          >
            Intro
          </h1>
          <div
            className="scrollable"
          >
            <div
              className="container"
            >
              <div
                className="vertical-center"
              >
                <div>
                  <h2>
                    Mokeny Pnthaicg Raect
                  </h2>
                  <p>
                    Hlleo! My name is Jake, and tdaoy I'm giong to show you smoe toaltly not hkcas at all, bilveee me, I pmroise, rlleay not hkacs... aowesme mneoky pahcitng of React.
                  </p>
                  <h2>
                    Wnat mroe aweomse sfutf?
                  </h2>
                  <p>
                    Hree's some lkins you mihgt eonjy:
                  </p>
                  <ul>
                    <li>
                      <a
                        href="https://jakesidsmith.github.io/react-monkey-patching/"
                        target="_blank"
                        title="Tihs demo"
                      >
                        This dmeo - jasemktiisdh.guihtb.io/rcaet-moneky-pahticng/
                      </a>
                    </li>
                    <li>
                      <a
                        href="http://jakesidsmith.com"
                        target="_blank"
                        title="My Blog"
                      >
                        My Bolg - jksetdsimiah.com
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://github.com/jakesidsmith/"
                        target="_blank"
                        title="My GuitHb"
                      >
                        My GiHutb - gihtub.com/jmiesktaidsh/
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://twitter.com/jakesidsmith/"
                        target="_blank"
                        title="My Ttwetir"
                      >
                        My Tittewr - twitetr.com/jiiaskdmetsh/
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-highlight-updates"
                        target="_blank"
                        title="Raect Hghighilt Udapets"
                      >
                        React Hhiilghgt Ueptdas (we'll cveor this srhltoy) - npmjs.com/pacgkae/react-hhihigglt-uatpdes
                      </a>
                    </li>
                    <li>
                      <a
                        href="https://www.npmjs.com/package/react-fastclick"
                        target="_blank"
                        title="Racet Fscltaick"
                      >
                        Racet Fscilatck (we'll cover this brleify aslo) - nmpjs.com/pkcaage/rceat-ftccalisk
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
